feat: add user api
